--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
       <h1>CatPhotoApp</h1>
       <h2>Cat Photos</h2>
       <!-- TODO: Add link to cat photos-->
-      <p>See more cat photos in our gallery.</p>
+      <p>
+        See more
+        <a href="https://freecatphotoapp.com" target="_blank">cat photos</a> in
+        our gallery.
+      </p>
+
       <img
         src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg"
-        alt=""
+        alt="A cute orange cat lying on its back"
       />
     </main>
   </body>
