--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
       <section>
         <h2>Cat Form</h2>
         <form action="https://freecatphotoapp.com/submit-cat-photo">
-          <input type="text" />
+          <input
+            type="text"
+            name="catphotoulr"
+            placeholder="cat photo URL"
+            required
+          />
         </form>
       </section>
     </main>
