--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
               for="loving"
               >Loving</label
             >
+            <input type="checkbox" name="personality" id="lazy" /><label
+              for="lazy"
+              >Lazy</label
+            >
+            <input type="checkbox" name="personality" id="energetic" /><label
+              for="energetic"
+              >Energetic</label
+            >
           </fieldset>
           <input
             type="text"
