--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cat photo app</title>
+    <title>CatPhotoApp</title>
   </head>
   <body>
     <main>
@@ -64,6 +64,7 @@
                 id="indoor"
                 name="indoor-outdoor"
                 value="indoor"
+                checked
               />Indoor</label
             >
             <label for=""
@@ -78,18 +79,25 @@
 
           <fieldset>
             <legend>What's your cat's personality?</legend>
-            <input type="checkbox" id="loving" name="personality" /><label
-              for="loving"
-              >Loving</label
-            >
-            <input type="checkbox" name="personality" id="lazy" /><label
-              for="lazy"
-              >Lazy</label
-            >
-            <input type="checkbox" name="personality" id="energetic" /><label
-              for="energetic"
-              >Energetic</label
-            >
+            <input
+              type="checkbox"
+              id="loving"
+              name="personality"
+              value="loving"
+              checked
+            /><label for="loving">Loving</label>
+            <input
+              type="checkbox"
+              name="personality"
+              id="lazy"
+              value="lazy"
+            /><label for="lazy">Lazy</label>
+            <input
+              type="checkbox"
+              name="personality"
+              id="energetic"
+              value="energetic"
+            /><label for="energetic">Energetic</label>
           </fieldset>
           <input
             type="text"
@@ -101,5 +109,10 @@
         </form>
       </section>
     </main>
+    <footer>
+      <p>
+        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+      </p>
+    </footer>
   </body>
 </html>
